--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -64,6 +64,14 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+  @font-face {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    src: url(/fonts/statif/static/OpenSans_Condensed-Regular.ttf);
+  }
 }
 
 @layer base {
@@ -74,3 +82,5 @@
     @apply bg-background text-foreground;
   }
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
